# model_server

./: Dockerfile.centos  Dockerfile.redhat  Dockerfile.ubuntu  Makefile
bert_frontend/: Dockerfile.ubuntu  server.py  utils.py
bert_frontend/templates/: data.html  form.html
ci/: Dockerfile
ci/coverage/: CMakeLists.txt  Dockerfile.Test
ci/coverage/ovms/: CMakeLists.txt
docs/: accelerators.md  additional_configuration.md  advanced_topics.md  api_reference_guide.md  build_from_source.md  clients.md  clients_tfs.md  dag_scheduler.md  dag_scheduler_config.md  deploying_server.md  docker_container.md  east_ocr.md  features.md  home.md  installations_kubernetes.md  model_server_rest_api.md  models_repository.md  multiple_models_mode.md  ovms_quickstart.md  parameters.md  security_considerations.md  single_model_mode.md  starting_server.md  using_cloud_storage.md  writing_app.md
example_client/: grpc_serving_client.py  grpc_start_one_stream.sh  vehicles_analysis_pipeline_client.py
example_client/cpp/src/: resnet_client.cpp
extras/openvino-operator-openshift/: README.md
extras/ovms-operator/: Dockerfile
release_files/: Dockerfile.redhat
src/: BUILD  binaryutils.cpp  customnodesession.cpp  deserialization.hpp  dl_node.cpp  dlnodesession.cpp  entry_node.cpp  http_rest_api_handler.cpp  localfilesystem.cpp  modelinstance.cpp  modelinstance.hpp  my_app.cpp  my_app_new_api.cpp  node_library_utils.cpp  nodeinfo.hpp  pipelinedefinition.cpp  serialization.cpp  statefulmodelinstance.cpp  statefulmodelinstance.hpp  status.cpp  status.hpp  tensorinfo.cpp
src/custom_nodes/east_ocr/: east_ocr.cpp
src/custom_nodes/model_zoo_intel_object_detection/: model_zoo_intel_object_detection.cpp  utils.hpp
src/test/: binaryutils_test.cpp  deserialization_tests.cpp  ensemble_flow_custom_node_tests.cpp  ensemble_tests.cpp  http_rest_api_handler_test.cpp  predict_validation_test.cpp  prediction_service_test.cpp  serialization_tests.cpp  status_test.cpp  test_utils.hpp  unit_tests.cpp
tests/functional/object_model/: docker.py
